tests/NormalTests/paczka1/small_fuzzy/33083335.err
Error in line 2: xJJK0vA S323 33,1
Error in line 6: TDdoVYuoRCg S323 23,6
Error in line 1: 4geIMvnZwj A589 53,8
Error in line 8: TDdoVYuoRCg A744 15,2
Error in line 10: TDdoVYuoRCg S323 33,8
